# FETA

./: README.md
authorizationServer/: Cargo.toml  Dockerfile
authorizationServer/src/: lib.rs  main.rs
client/: Cargo.toml  Dockerfile
client/src/: lib.rs  main.rs
client/src/client1/: Y_2.npy  Y_4.npy  Y_8.npy  Y_test.npy
client/src/client2/: Y_2.npy  Y_4.npy  Y_8.npy
client/src/client3/: Y_4.npy  Y_8.npy
client/src/client4/: Y_4.npy  Y_8.npy
client/src/client5/: Y_8.npy
client/src/client6/: Y_8.npy
client/src/client7/: Y_8.npy
client_python/: Dockerfile  client.py  requirements.txt
