[package]
name = "authorizationServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-client = { git = "https://github.com/iotaledger/iota.rs", branch = "production" }
tokio = { version = "1.12.0", features = ["full"] }
identity_iota = { version = "0.6" }

rand = { version = "0.8.5" }
rand_chacha = { version = "0.3.1" }

bstr = "1.2.0"