[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
identity_iota = { version = "0.6" }
iota-client = { git = "https://github.com/iotaledger/iota.rs", branch = "production" }
ipfs-api = "0.17.0"
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3.1" }
futures = "0.3.27"

bstr = "1.2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sha2 = "0.10.6"
base16ct = { version = "0.2.0", features = ["alloc"] }

zmq = "0.10.0"
